# 30-dias-de-python

./: pyproject.toml
analise-deadfish/: README.md  basic_stats.py  cleaner.py  deadfish.csv  deadfish_limpo.csv  deadfish_stats.csv  pyproject.toml  scrapper.py  visual.py
dia_01/: musica.py
dia_02/: animacao.py  drum.mid  out_midi.txt  teste.py  thumb.py
dia_03/: README.md  pyproject.toml  testes_http.py
dia_04/: README.md  exemplos.py  testes_http.py
dia_05/: README.md  exemplos.py  testes_http.py
dia_06/: README.md  exemplos.py  inicio.py  testes_http.py
dia_07/: codigo.py  pyproject.toml  run_test.py  tests.py
dia_08/: exemplo_00.py  exemplo_01.py  exemplo_02.py
