[project]
name = "analise-deadfish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.0",
    "parsel>=1.9.1",
    "pip>=24.3.1",
    "polars>=1.17.1",
    "pyqt6>=6.8.1",
    "spacy>=3.8.4",
]
