[project]
name = "dia_07"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "dunossauro", email = "mendesxeduardo@gmail.com"},
]
dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "GPL"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
